guardando estado actual de obs

--- a/.config/obs-studio/basic/profiles/Twitch_ALSW/basic.ini
+++ b/.config/obs-studio/basic/profiles/Twitch_ALSW/basic.ini
@@ -36,6 +36,8 @@ FFAEncoderId=0
 FFAEncoder=
 FFAudioMixes=1
 VodTrackIndex=2
+RecFilePath=/home/SudoData/GrabacionesOBS/2021/06_Jinio
+RecEncoder=ffmpeg_nvenc
 
 [WebsocketAPI]
 ServerEnabled=true
