Actual perfil de OBS

--- a/.config/obs-studio/basic/profiles/Twitch_ALSW/basic.ini
+++ b/.config/obs-studio/basic/profiles/Twitch_ALSW/basic.ini
@@ -7,7 +7,7 @@ BaseCY=1080
 OutputCX=1920
 OutputCY=1080
 FPSType=0
-FPSCommon=30
+FPSCommon=60
 
 [Panels]
 CookieId=A8528AE30C77ABE5
@@ -21,6 +21,7 @@ FilePath=/home/SudoData/GrabacionesOBS/2021/03_Marzo
 
 [Output]
 Mode=Advanced
+DynamicBitrate=false
 
 [AdvOut]
 TrackIndex=1
@@ -36,7 +37,7 @@ FFAEncoderId=0
 FFAEncoder=
 FFAudioMixes=1
 VodTrackIndex=2
-RecFilePath=/home/SudoData/GrabacionesOBS/2021/06_Jinio
+RecFilePath=/home/SudoData/GrabacionesOBS/2021/09_Septiembre
 RecEncoder=ffmpeg_nvenc
 
 [WebsocketAPI]
