--- a/.config/obs-studio/basic/profiles/Youtube_Cuadrado/basic.ini
+++ b/.config/obs-studio/basic/profiles/Youtube_Cuadrado/basic.ini
@@ -1,10 +1,10 @@
 [General]
-Name=Youtube_ALSW
+Name=Youtube_Cuadrado
 
 [Video]
-BaseCX=1920
+BaseCX=1080
 BaseCY=1080
-OutputCX=1920
+OutputCX=1080
 OutputCY=1080
 ColorSpace=709
 FPSCommon=60
@@ -16,6 +16,7 @@ CookieId=48E8146D70C43E45
 
 [Output]
 Mode=Advanced
+FilenameFormatting=Cuadrado_%CCYY-%MM-%DD %hh-%mm-%ss
 
 [SimpleOutput]
 VBitrate=2000
@@ -24,7 +25,7 @@ VBitrate=2000
 Encoder=ffmpeg_nvenc
 TrackIndex=1
 RecType=Standard
-RecFilePath=/home/SudoData/GrabacionesOBS/2021/06_Jinio
+RecFilePath=/home/SudoData/GrabacionesOBS/2021/09_Septiembre
 RecTracks=1
 FLVTrack=1
 FFOutputToFile=true
@@ -42,6 +43,9 @@ Track3Name=DNI
 RecEncoder=ffmpeg_nvenc
 ApplyServiceSettings=true
 RecFileNameWithoutSpace=true
+RescaleRes=1920x1080
+RecRescaleRes=1920x1080
+FFRescaleRes=1920x1080
 
 [Audio]
 SampleRate=48000
