--- a/.config/obs-studio/basic/profiles/Youtube_Shorts/basic.ini
+++ b/.config/obs-studio/basic/profiles/Youtube_Shorts/basic.ini
@@ -7,9 +7,9 @@ BaseCY=1920
 OutputCX=1080
 OutputCY=1920
 ColorSpace=709
-FPSCommon=30
+FPSCommon=60
 ColorFormat=NV12
-ColorRange=Full
+ColorRange=Partial
 
 [Panels]
 CookieId=48E8146D70C43E45
