reparando separar audio y mejorar calidad de envivo

--- a/.config/obs-studio/basic/profiles/Youtube_ALSW/basic.ini
+++ b/.config/obs-studio/basic/profiles/Youtube_ALSW/basic.ini
@@ -24,8 +24,8 @@ VBitrate=2000
 Encoder=ffmpeg_nvenc
 TrackIndex=1
 RecType=Standard
-RecFilePath=/home/SudoData/GrabacionesOBS/2021/06_Jinio
-RecTracks=1
+RecFilePath=/home/SudoData/GrabacionesOBS/2022/03_Marzo
+RecTracks=63
 FLVTrack=1
 FFOutputToFile=true
 FFFormat=
@@ -38,10 +38,18 @@ FFAudioMixes=1
 Track1Bitrate=320
 Track1Name=Principal
 Track2Name=Mirofono
-Track3Name=DNI
+Track3Name=Audiencia
 RecEncoder=ffmpeg_nvenc
 ApplyServiceSettings=true
 RecFileNameWithoutSpace=true
+Track2Bitrate=320
+Track3Bitrate=320
+Track4Bitrate=320
+Track5Bitrate=320
+Track6Bitrate=320
+Track4Name=Umaru
+Track5Name=Firefox
+Track6Name=ElGatoALSW
 
 [Audio]
 SampleRate=48000
