--- a/.config/elgatoalsw-cli/config.json
+++ b/.config/elgatoalsw-cli/config.json
@@ -1,6 +1,7 @@
 {
   "deck_file": "deck.json",
   "teclados_file": "teclados.json",
+  "alias_file": "alias/alias.json",
   "folder_path": "defaul",
   "fuente": "base/Roboto-Black.ttf",
   "broker_mqtt": "test.mosquitto.org",
